Fix weird spacing beneath `ol` element

--- a/projects/7125/7125.css
+++ b/projects/7125/7125.css
@@ -1,5 +1,9 @@
 /* MAIN STYLING */
-.music-list li {
+.music-list {
+    padding-bottom: 15px;
+}
+
+.music-list li:not(:last-of-type) {
     margin-bottom: 10px;
 }
 
